# tp2redes

TP2client/: TP2client.cbp  TP2client.depend  TP2client.layout  a.out  main.cpp
TP2interface/: CMakeLists.txt  interface.cpp
TP2server/: TP2server.cbp  TP2server.depend  TP2server.layout  a.out  main.cpp
