project(interface)

cmake_minimum_required(VERSION 2.8)

add_executable(${PROJECT_NAME}	interface.cpp)

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS}	${SDL2TTF_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}	${SDL2_LIBRARIES} ${SDL2TTF_LIBRARIES})
